* Add plate name and sample drop off location to Capillary Sequencing request submission scrrens. (bspiglejr)
* Group Samples on Capillary Sequencing request submission by plate if chose plate type.  (bspiglejr)
* Added changes for Topics feature.  (rcundick)
* Fixed a bug that was causing the Institutions dropdown on the labView to not refresh properly. (tcourdy)


5.4.3
---------------------
* Don't allow sortable columns on Workflow - Illumina Data Pipeline.
* Make average insert size (range) and capture lib design id configurable based on sequencing application.(tcourdy)
* Get rid of duplicate 'Change Password' link on login page.(tcourdy)
* Added isActive check boxes to the organism and genome build windows under the data tracks view.(tcourdy)
* Allow users to search for lab groups based on department name.(tcourdy)
* Projects listed in experiment edit view dropdown box are now sorted alphabetically.(tcourdy) 
* Show instititue/username/password if property set to indicate no university id logins. (bspigle)
* Fix data track query when Analysis files are deleted (get rid of extra trailing comma when analysis files are not yet saved to db).  (tdisera)

5.4.2.3 (May 2, 2012)
----------------------
* Add CoreFacilityLab to hook core facilities to labs.   (bspiglejr)
* Use CoreFacilityLab to get email addresses for admin email for public registry users. (bspigljejr)
* Add CoreFaclilityManagers to allow specifying managers for core facilities. (bspiglejr)
* Distribute Data Tracks - require .bam and .bai files to be dragged together. (tdisera)
* Fix RegisterFiles batch job to correctly match analysis file names in analysis directory (tdisera)
* Order file names alphabetically for Experiment files. (tdisera)
* Name links 'Register Experiment' for external data sharing site. (tdisera)
* Prune all data track empty folders for guest user. (bspiglejr)
* Fix bug in RegisterFiles batch job that was setting baseFilePath to null. (tdisera)